# project-21

./: .env  .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.dev.ts
backend/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/migrations/: 20260329100000_create_contact_messages.sql  20260329110000_create_success_stories.sql  20260330120000_create_admins.sql  20260330140000_create_testimonials.sql  20260330140500_create_faculty.sql
backend/src/: main.rs
docs/: prd.md
src/: index.css  routes.tsx
src/components/layout/: Footer.tsx  Navigation.tsx
src/components/sections/: AboutSection.tsx  ContactSection.tsx  FacultySection.tsx  HeroSection.tsx  ProgramsSection.tsx  SuccessStoriesSection.tsx  TestimonialsSection.tsx  WhyChooseUsSection.tsx
src/components/ui/: CustomCursor.tsx  demo.tsx  floating-whatsapp.tsx  hero-gallery-scroll-animation.tsx  interactive-hover-links.tsx  testimonial.tsx  timeline-animation.tsx
src/lib/: api.ts
src/pages/: AdminDashboard.tsx  AdminFaculty.tsx  AdminLogin.tsx  AdminMessages.tsx  AdminSuccessStories.tsx  AdminTestimonials.tsx  DemoLinks.tsx  Home.tsx  TestimonialDemo.tsx  demo.tsx
